[package]
name = "sclass"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "middleware"
path = "src/middleware/server.rs"

[[bin]]
name = "set-temp"
path = "src/app/set_temp.rs"

[[bin]]
name = "temp-stream"
path = "src/app/temp_stream.rs"

[[bin]]
name = "request-bench"
path = "src/app/request_bench.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
rand = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }

[dev-dependencies]
criterion = "0.3.5"

[build-dependencies]
tonic-build = "0.6"
